--- a/src/config.h.in
+++ b/src/config.h.in
@@ -52,24 +52,27 @@
 
 /*
  *SRB2P manually defined hashes for non-CMake builds.
- 
+
  *Hashes update log:
+	-- DEMO --
 	02/11/2020	- RC1		- Added file hashes	for testing purposes
 	12/11/2020	- DEMO 1.0	- Final file hashes for DEMO 1.0
 	16/11/2020	- DEMO 1.1	- SRB2P-main.pk3
 	20/11/2020	- DEMO 1.2	- SRB2P-main.pk3
-	
+
+	-- MULTIPLAYER EDITION --
 	28/10/2021  - MP 1.3	- All files
 	02/11/2021	- MP 1.3.1	- SRB2P-main.pk3
 	11/11/2021	- MP 1.3.2	- SRB2P-main.pk3, SRB2P-maps.wad
 	28/12/2021	- MP 1.3.3	- SRB2P-main.pk3, SRB2P-graphics.pk3, SRB2P-maps.wad
+	29/05/2022	- MP 1.3.4	- SRB2P-main.pk3, SRB2P-graphics.pk3, SRB2P-maps.wad, SRB2P-chars.wad
 */
- 
-#define ASSET_HASH_SRB2P_MAIN_PK3		"88aa161db2ac6677b66167d6c4bf608e"
-#define ASSET_HASH_SRB2P_GRAPHICS_PK3	"666a7a583de761d3d86a71e7e2f7dc2b"
-#define ASSET_HASH_SRB2P_MAPS_WAD		"3d7044006227074bda3b59c33bf1493c"
-#define ASSET_HASH_SRB2P_CHARS_WAD		"6d47363cf9095dc2537db8008f6331c8"
+
+#define ASSET_HASH_SRB2P_MAIN_PK3		"131bf2b910539b8c23afdbe4879ec2f8"
+#define ASSET_HASH_SRB2P_GRAPHICS_PK3	"707a19bc4d3a3b5b796aa614d16d25a2"
+#define ASSET_HASH_SRB2P_MAPS_WAD		"9b82ba126f9bd782a4c4a42e5898860d"
+#define ASSET_HASH_SRB2P_CHARS_WAD		"6a5a0d1208db63d11b492fc8f2d449ad"
 #define ASSET_HASH_SRB2P_PATCH_PK3		"a8b9eafc014046fdfba3dc813f2da166"
- 
+
 #endif
 #endif
