--- a/src/config.h.in
+++ b/src/config.h.in
@@ -66,9 +66,10 @@
 	11/11/2021	- MP 1.3.2	- SRB2P-main.pk3, SRB2P-maps.wad
 	28/12/2021	- MP 1.3.3	- SRB2P-main.pk3, SRB2P-graphics.pk3, SRB2P-maps.wad
 	29/05/2022	- MP 1.3.4	- SRB2P-main.pk3, SRB2P-graphics.pk3, SRB2P-maps.wad, SRB2P-chars.wad
+	30/05/2022	- MP 1.3.5	- SRB2P-main.pk3
 */
 
-#define ASSET_HASH_SRB2P_MAIN_PK3		"131bf2b910539b8c23afdbe4879ec2f8"
+#define ASSET_HASH_SRB2P_MAIN_PK3		"4c5432e9254ac625c39edeb413dc15d1"
 #define ASSET_HASH_SRB2P_GRAPHICS_PK3	"707a19bc4d3a3b5b796aa614d16d25a2"
 #define ASSET_HASH_SRB2P_MAPS_WAD		"9b82ba126f9bd782a4c4a42e5898860d"
 #define ASSET_HASH_SRB2P_CHARS_WAD		"6a5a0d1208db63d11b492fc8f2d449ad"
