--- a/src/config.h.in
+++ b/src/config.h.in
@@ -67,10 +67,11 @@
 	28/12/2021	- MP 1.3.3	- SRB2P-main.pk3, SRB2P-graphics.pk3, SRB2P-maps.wad
 	29/05/2022	- MP 1.3.4	- SRB2P-main.pk3, SRB2P-graphics.pk3, SRB2P-maps.wad, SRB2P-chars.wad
 	30/05/2022	- MP 1.3.5	- SRB2P-main.pk3
+	13/05/2023 	- MP 1.3.6 	- SRB2P-main.pk3, SRB2P-graphics.pk3
 */
 
-#define ASSET_HASH_SRB2P_MAIN_PK3		"4c5432e9254ac625c39edeb413dc15d1"
-#define ASSET_HASH_SRB2P_GRAPHICS_PK3	"707a19bc4d3a3b5b796aa614d16d25a2"
+#define ASSET_HASH_SRB2P_MAIN_PK3		"a2991b3691dd004b95c48dfb87d38d1c"
+#define ASSET_HASH_SRB2P_GRAPHICS_PK3	"b6941f0e72aac90008314f46f3172345"
 #define ASSET_HASH_SRB2P_MAPS_WAD		"9b82ba126f9bd782a4c4a42e5898860d"
 #define ASSET_HASH_SRB2P_CHARS_WAD		"6a5a0d1208db63d11b492fc8f2d449ad"
 #define ASSET_HASH_SRB2P_PATCH_PK3		"a8b9eafc014046fdfba3dc813f2da166"
